--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "casual": "^1.6.2",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "nodemon": "^3.1.0"
+    "lodash": "^4.17.21",
+    "mongoose": "^8.2.0",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
